--- a/public/index.html
+++ b/public/index.html
@@ -15,15 +15,13 @@
       }
       *{
         font-family: Gumela;
-        font-weight: normal;
-        font-size: 20px;
       }
       body{
         margin: 0;
         /* transform: scale(1.5); */
       }
     </style>
-    <title>Portfolio</title>
+    <title>Bot, Process and Efficiency | XivTech</title>
   </head>
   <body style="margin: 0;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
